[metadata]
name = accelerated_features
version = 1.0.0
author = Guilherme Potje, Felipe Cadar, Andre Araujo, Renato Martins, Erickson R. Nascimento
description = XFeat: Accelerated Features for Lightweight Image Matching
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nasazzam/accelerated_features
project_urls =
    Paper = https://arxiv.org/abs/2404.19174
    Project Page = https://www.verlab.dcc.ufmg.br/descriptors/xfeat_cvpr24/
    Source = https://github.com/nasazzam/accelerated_features
license = Apache 2.0
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Recognition

[options]
packages = find:
python_requires = >=3.8
install_requires =
    torch>=1.10.0
    opencv-contrib-python-headless>=4.5.0
    kornia>=0.7.0
    tqdm
    gdown

[options.packages.find]
exclude =
    notebooks
    notebooks.*
    third_party
    third_party.*
    assets
    figs
    tests
    tests.*

[options.extras_require]
dev =
    pytest
    pytest-cov
    black
    flake8
training =
    poselib

[options.package_data]
* = *.pt, *.json, *.png

[flake8]
max-line-length = 120
exclude = .git,__pycache__,notebooks,third_party,build,dist
ignore = E203, E266, E501, W503

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*

